# json-to-cmake

./: .gitignore  CMakeLists.txt  README.md  cmake_data.json  main.cpp  visualize-link-tree-main.cpp
dep/include/JSON/: JsonParser.hpp  JsonValue.hpp
for_copy/: hello.txt
for_copy/other_dir/: Noice.txt
include/: AllData.hpp  FileHelper.hpp  FileRetriever.hpp  ImportedLib.hpp  Linker.hpp  Logger.hpp  SampleClass.hpp  StringHelper.hpp
include/constants/: Globals.hpp  Tags.hpp
include/file-writing/: CmakeCustomFunctions.hpp  FileWriter.hpp
include/general-data/: BuildTarget.hpp  GeneralData.hpp
include/helpers/: FileHelper.hpp  FileWriteHelper.hpp  GitHelper.hpp
include/output/: OutputBase.hpp  OutputGroup.hpp  OutputItem.hpp
src/: AllData.cpp  FileHelper.cpp  FileRetriever.cpp  ImportedLib.cpp  Linker.cpp  Logger.cpp  SampleClass.cpp  StringHelper.cpp
src/file-writing/: FileWriter.cpp
src/general-data/: BuildTarget.cpp  GeneralData.cpp
src/helpers/: FileHelper.cpp  FileWriteHelper.cpp  GitHelper.cpp  StringHelper.cpp
src/output/: OutputBase.cpp  OutputGroup.cpp  OutputItem.cpp
tests/: visualize-link-tree-main.cpp
